Added pgn document handling.

--- a/ChessUI/ChessUI-Info.plist
+++ b/ChessUI/ChessUI-Info.plist
@@ -8,7 +8,20 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
-		<dict/>
+		<dict>
+			<key>CFBundleTypeIconFiles</key>
+			<array/>
+			<key>CFBundleTypeName</key>
+			<string>PGN</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.ajgreensoftware.chessdatabase.pgn</string>
+			</array>
+			<key>Role</key>
+			<string>Editor</string>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
@@ -39,6 +52,27 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.plain-text</string>
+				<string>public.text</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>PGN</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.ajgreensoftware.chessdatabase.pgn</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>pgn</string>
+				<key>public.mime-type</key>
+				<string>application/x-chess-pgn</string>
+			</dict>
+		</dict>
 	</array>
 </dict>
 </plist>
